force-app/main/default/objects/FieloEE__News__c/FieloEE__News__c.object-meta.xml
<CustomObject>
    <description>Content that is shown in the members’ portal by using a “Content feed” component. Its main use is for publishing news.</description>
    <label>Content feed</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content feed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>