force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AttachmentId__c</fullName>
    <description>ID of an image file that can be added to this content feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>