force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Body__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Body__c</fullName>
    <description>The actual content of this content feed. You can use rich text and images.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter text or images for your content feed.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>