force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__ExternalName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExternalName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>