force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Image__c</fullName>
    <formula>&quot;&lt;img src=\&quot; servlet/servlet.FileDownload?file=&quot; &amp; FieloEE__AttachmentId__c &amp; &quot;\&quot;/&gt;&quot;</formula>
    <inlineHelpText>Enter the ID of the image file to be added to this content feed.</inlineHelpText>
    <label>Image</label>
    <type>Text</type>
</CustomField>