force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__PublishDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PublishDate__c</fullName>
    <description>The date from which this content feed will show in the members&apos; portal.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Set the starting day for showing this content feed.</inlineHelpText>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>