force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Title__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Title__c</fullName>
    <description>The title that will show on top of this content feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the title for this content feed.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>